<resources>
    <string name="app_name" translatable="false">Module 201 - Guide</string>
    <string name="linero_tech_ab" translatable="false">Linero Tech AB</string>
    <string name="teaching_android_development">Teaching Android Development</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="google_login">Google Login</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="successful_login">Successful Login</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_field_cannot_be_empty">Password Field Cannot Be Empty</string>
    <string name="username">Username</string>
    <string name="account_created">Account Created</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>

</resources>