<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingHorizontal="26dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewLogin"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/email"
        android:fontFamily="@font/montserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/textViewLogin"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:fontFamily="@font/montserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:inputType="textPassword"
        android:layout_below="@id/editTextEmail"/>

    <Button
        android:id="@+id/buttonLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/purple_100"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_medium"
        android:layout_below="@id/editTextPassword"/>

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:layout_below="@id/buttonLogin"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textViewForgotPassword">

        <ImageButton
            android:id="@+id/buttonFacebook"
            android:src="@drawable/facebook"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/facebook_login"/>

        <ImageButton
            android:id="@+id/buttonGoogle"
            android:src="@drawable/google"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/google_login"/>

        <ImageButton
            android:id="@+id/buttonTwitter"
            android:src="@drawable/twitter"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/twitter_login"/>
    </LinearLayout>


</RelativeLayout>